--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --color-carnation: #F77566;
+  --color-pipin: #FFE7E5;
+  --color-cornflowerBlue: #6686F7;
+  --color-tundora: #4a4a4a;
+  --color-hawkesBlue: #E6EBFE;
+}
+
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+ul {
+  list-style-type: none;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
