test cases and updates

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ code {
   --color-cornflowerBlue: #6686F7;
   --color-tundora: #4a4a4a;
   --color-hawkesBlue: #E6EBFE;
+  --color-deyork: #81C784;
+  --color-panache: #E8F5E9;
 }
 
 
